--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "index.js",
   "scripts": {
     "test": "node ./node_modules/.bin/jest",
-    "start": "node index.js",
     "linter": "node ./node_modules/eslint/bin/eslint.js .",
     "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
     "server": "node ./lib/server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "JorgeLMarquez",
   "license": "ISC",
   "devDependencies": {
     "eslint": "^8.14.0",
