--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jest": "^26.0.0"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "jest-json-matchers": "^1.1.0"
   }
 }
