--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "express": "^4.18.1",
-    "jest-json-matchers": "^1.1.0"
+    "jest-json-matchers": "^1.1.0",
+    "node-telegram-bot-api": "^0.57.0"
   }
 }
